# rocket-kanban

./: .gitignore  Cargo.toml  README.md
migrations/2022-01-23-195437_create_boards/: down.sql  up.sql
migrations/2022-01-23-195604_create_cards/: down.sql  up.sql
src/: db.rs  logger.rs  main.rs  models.rs  routes.rs  schema.rs
src/db/: errors.rs  mod.rs  models.rs
src/routes/: auth.rs  boards.rs  cards.rs  catcher.rs  http_error.rs  http_response.rs  mod.rs  token.rs
