[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
fern = "0.6.0"
log = "0.4.14"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "1.1", features = ["postgres"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
# rocket_contrib = "0.4.10"