[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.17"
fern = "0.6.1"
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
uuid = { version = "1.2", features = ["serde", "v4"] }